--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,5 +12,5 @@ jobs:
       uses: SamKirkland/FTP-Deploy-Action@4.3.2
       with:
         server: ftp.samkirkland.com
-        username: myFtpUserName
+        username: therese@dvw.one
         password: ${{ secrets.ftp_password }}
